--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,20 +11,21 @@ body {
 .container {
   display: grid;
   grid-template-columns: repeat(4, minmax(250px, 1fr));
-  grid-template-rows: 0.5fr 0.6fr 1.4fr 0.4fr;
+  grid-template-rows: 0.4fr 0.6fr 1.4fr 0.4fr;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
     "logo menu menu menu"
-    "foto foto slogan slogan"
+    "carrusel carrusel slogan slogan"
     "novedades novedades novedades novedades"
     "pie pie pie pie";
   margin: 20px 20px;
+  transition: all 1s ease-out;
 }
 
 .logo {
   grid-area: logo;
-  font-size: 60px;
+  font-size: 3vw;
   color: #4d312c;
   font-family: 'DM Sans', sans-serif;
   text-decoration: underline;
@@ -32,7 +33,6 @@ body {
   text-shadow: 0px 0px 5px rgba(128, 128, 128, 1);
   display: flex;
   flex-direction: column;
-  cursor: pointer;
 }
 
 .menu {
@@ -41,7 +41,6 @@ body {
   grid-template-rows: 0.2fr 0.4fr 0.5fr;
   gap: 0px 0px;
   grid-template-areas:
-    ". . . . ."
     ". navegacion navegacion navegacion navegacion"
     ". . . buscador buscador";
   grid-area: menu;
@@ -108,7 +107,6 @@ body {
   align-items: stretch;
   margin-top: 10px;
   width: 250px;
-  height: 150px;
 }
 
 form {
@@ -159,52 +157,18 @@ input.nosubmit {
 
 .foto {
   display: grid;
-  justify-content: center;
-  align-content: center;
-  grid-area: foto;
+  place-items: center;
   width: 100%;
-  height: 100%;
 }
 
 .foto-img {
-  width: 40vw;
+  width: 70%;
   border-radius: 20px;
+  aspect-ratio: 16 / 7;
 }
 
 .slogan {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(6, 1fr);
-  gap: 0px 0px;
-  grid-template-areas:
-    "."
-    "hacemos"
-    "alma"
-    "materias"
-    "calidad"
-    ".";
   grid-area: slogan;
-  width: 100%;
-  height: 100%;
-}
-
-.hacemos {
-  grid-area: hacemos;
-}
-
-.alma {
-  grid-area: alma;
-}
-
-.materias {
-  grid-area: materias;
-}
-
-.calidad {
-  grid-area: calidad;
-}
-
-.hacemos {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -214,34 +178,9 @@ input.nosubmit {
   text-shadow: 0px 0px 3px rgba(128, 128, 128, 0.8);
 }
 
-.alma {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 28px;
-  color: #d57430;
-  font-family: 'DM Sans', sans-serif;
-  text-shadow: 0px 0px 3px rgba(128, 128, 128, 0.8);
-}
-
-.materias {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 28px;
-  color: #d57430;
-  font-family: 'DM Sans', sans-serif;
-  text-shadow: 0px 0px 3px rgba(128, 128, 128, 0.8);
-}
-
-.calidad {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 28px;
-  color: #d57430;
-  font-family: 'DM Sans', sans-serif;
-  text-shadow: 0px 0px 3px rgba(128, 128, 128, 0.8);
+.slogan-text {
+  text-align: center;
+  padding: 0 100px;
 }
 
 .flecha {
@@ -308,24 +247,29 @@ input.nosubmit {
 }
 
 .novedades-list {
-  width: 20%;
+  width: 100%;
   margin: 20px auto;
   padding-inline-start: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .novedades-list-item {
   list-style-type: none;
-  margin-left: 70px;
   height: 2rem;
-  width: 200px;
   color: #24140D;
   font-size: 20px;
   font-family: 'DM Sans', sans-serif;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  text-decoration: underline;
 }
 
 
 .novedades-list-item:hover {
-  text-decoration: underline;
+  text-decoration: none;
   cursor: pointer;
 }
 
@@ -338,18 +282,19 @@ input.nosubmit {
   grid-template-areas:
     "redes contacto aviso privacidad uso venta derechos";
   grid-area: pie;
+  align-items: center;
 }
 
 .pie-item {
   display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: 22px;
+  font-size: 1.3vw;
   color: #6F4332;
   font-family: 'DM Sans', sans-serif;
   cursor: pointer;
   text-decoration: underline;
   text-align: center;
+  justify-content: space-evenly;
 }
 
 .pie-item:hover {
@@ -382,8 +327,6 @@ input.nosubmit {
 
 .redes {
   grid-area: redes;
-  display: flex;
-  justify-content: flex-end;
   cursor: pointer;
 }
 
@@ -393,14 +336,14 @@ input.nosubmit {
 }
 
 .wrapper-carrusel {
-  width: 100%;
-  margin: 10px auto;
+  grid-area: carrusel;
+  display: grid;
+  place-items: center;
 }
 
 .carrusel {
-  margin: 0 auto;
-  width: 998px;
-  height: 430px;
+  width: 100%;
+  aspect-ratio: 16 / 7;
   position: relative;
   overflow: hidden;
   padding-inline-start: 0px;
@@ -410,11 +353,12 @@ input.nosubmit {
   display: block;
   position: absolute;
   top: 0;
+  width: 100%;
 }
 
 li img {
   border-radius: 20px;
-  width: 998px;
+  width: 100%;
 }
 
 .nosemueve {
@@ -448,7 +392,7 @@ li img {
 }
 
 .navegacion li {
-  width: 150px;
+  width: 14vw;
   position: relative;
 }
 
@@ -481,7 +425,7 @@ li img {
 }
 
 .navegacion ul li {
-  width: 150px;
+  width: 100%;
   float: left;
   border-top: none;
 }
@@ -521,9 +465,11 @@ li img {
   transform: scale(1);
   transition: transform 0.4s cubic-bezier(0.36, 1.01, 0.32, 1.27);
 }
+
 .button:active {
   transform: scale(1);
 }
+
 .button span {
   font-size: 20px;
   text-transform: uppercase;
@@ -536,7 +482,9 @@ li img {
   transform: translateY(var(--span-y, 0));
   transition: transform 0.7s ease;
 }
-.button span:before, .button span:after {
+
+.button span:before,
+.button span:after {
   content: '';
   width: var(--w, 2px);
   height: var(--h, 14px);
@@ -548,12 +496,14 @@ li img {
   transform: scale(0.75) rotate(var(--icon-r, 0deg)) translateY(var(--icon-y, 0));
   transition: transform 0.65s ease 0.05s;
 }
+
 .button span:after {
   --w: 14px;
   --h: 2px;
   --l: 2px;
   --t: 12px;
 }
+
 .button .cart {
   position: absolute;
   left: 50%;
@@ -562,10 +512,13 @@ li img {
   transform-origin: 12px 23px;
   transform: translateX(-120px) rotate(-18deg);
 }
-.button .cart:before, .button .cart:after {
+
+.button .cart:before,
+.button .cart:after {
   content: '';
   position: absolute;
 }
+
 .button .cart:before {
   width: 6px;
   height: 6px;
@@ -575,6 +528,7 @@ li img {
   left: 9px;
   filter: drop-shadow(11px 0 0 #FFFFFF);
 }
+
 .button .cart:after {
   width: 16px;
   height: 9px;
@@ -585,6 +539,7 @@ li img {
   transform: perspective(4px) rotateX(-6deg) scaleY(var(--fill, 0));
   transition: transform 1.2s ease var(--fill-d);
 }
+
 .button .cart svg {
   z-index: 1;
   width: 36px;
@@ -597,12 +552,14 @@ li img {
   stroke-linecap: round;
   stroke-linejoin: round;
 }
+
 .button .cart svg polyline:last-child {
   stroke: var(#362A89);
   stroke-dasharray: 10px;
   stroke-dashoffset: var(--offset, 10px);
   transition: stroke-dashoffset 0.4s ease var(--offset-d);
 }
+
 .button.loading {
   --scale: 0.95;
   --span-y: -32px;
@@ -612,42 +569,60 @@ li img {
   --offset: 0;
   --offset-d: 1.73s;
 }
+
 .button.loading .cart {
   animation: cart 3.4s linear forwards 0.2s;
 }
+
 @keyframes cart {
   12.5% {
     transform: translateX(-60px) rotate(-18deg);
   }
-  25%, 45%, 55%, 75% {
+
+  25%,
+  45%,
+  55%,
+  75% {
     transform: none;
   }
+
   50% {
     transform: scale(0.9);
   }
-  44%, 56% {
+
+  44%,
+  56% {
     transform-origin: 12px 23px;
   }
-  45%, 55% {
+
+  45%,
+  55% {
     transform-origin: 50% 50%;
   }
+
   87.5% {
     transform: translateX(70px) rotate(-18deg);
   }
+
   100% {
     transform: translateX(140px) rotate(-18deg);
   }
 }
+
 html {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
 }
+
 * {
   box-sizing: inherit;
 }
-*:before, *:after {
+
+*:before,
+*:after {
   box-sizing: inherit;
 }
+
 body {
   min-height: 100vh;
   display: flex;
@@ -656,22 +631,26 @@ body {
   align-items: center;
   background: #ECEFFC;
 }
+
 body .dribbble {
   position: fixed;
   display: block;
   right: 20px;
   bottom: 20px;
 }
+
 body .dribbble img {
   display: block;
   height: 28px;
 }
+
 body .twitter {
   position: fixed;
   display: block;
   right: 64px;
   bottom: 14px;
 }
+
 body .twitter svg {
   width: 32px;
   height: 32px;
@@ -688,20 +667,184 @@ body .twitter svg {
 
 @keyframes abre-buscador {
   from {
-    width: 250px;
+    width: 150px;
   }
 
   to {
-    width: 400px;
+    width: 200px;
   }
 }
 
 @keyframes cierra-buscador {
   from {
-    width: 400px;
+    width: 200px;
   }
 
   to {
-    width: 250px;
+    width: 150px;
+  }
+}
+
+@media all and (max-width: 1040px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 160px 160px;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "logo menu"
+      "slogan slogan"
+      "carrusel carrusel"
+      "novedades novedades"
+      "pie pie";
+    transition: all 1s ease-out;
+  }
+
+  .logo {
+    grid-area: logo;
+    font-size: 5vw;
+    color: #4d312c;
+    font-family: 'DM Sans', sans-serif;
+    text-decoration: underline;
+    font-weight: bold;
+    text-shadow: 0px 0px 5px rgba(128, 128, 128, 1);
+    display: flex;
+    flex-direction: column;
+  }
+
+  .carrusel {
+    width: 85%;
+    aspect-ratio: 16 / 7;
+    position: relative;
+    overflow: hidden;
+    padding-inline-start: 0px;
+  }
+
+  li img {
+    border-radius: 20px;
+    width: 100%;
+  }
+
+  .menu {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    /* grid-template-rows: 0.2fr 0.4fr 0.5fr; */
+    gap: 0px 0px;
+    grid-template-areas:
+      ". navegacion navegacion navegacion navegacion"
+      ". . . buscador buscador";
+    grid-area: menu;
+    align-items: center;
+    justify-items: end;
+  }
+
+  .navegacion li {
+    width: 17vw;
+    position: relative;
+  }
+
+  .slogan {
+    grid-area: slogan;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-content: center;
+    gap: 10px 0px;
+    grid-template-areas:
+      "hacemos"
+      "alma";
+    width: 100%;
+    height: 100%;
+  }
+
+  .pie-item {
+    font-size: 2vw;
+  }
+
+  .foto-img {
+    width: 85%;
+    border-radius: 20px;
+    aspect-ratio: 16 / 7;
+  }
+}
+
+@media all and (max-width: 780px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 160px 160px;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "logo menu"
+      "slogan slogan"
+      "carrusel carrusel"
+      "novedades novedades"
+      "pie pie";
+    transition: all 1s ease-out;
+  }
+
+  .menu {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0px 0px;
+    grid-template-areas: "buscador navegacion";
+    grid-area: menu;
+    align-items: start;
+    justify-items: end;
+  }
+
+  .navegacion {
+    grid-area: navegacion;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navegacion ul {
+    position: absolute;
+    left: -150px;
+    right: 151px;
+    top: 0;
+    display: none;
+    padding: 0;
+    list-style: none;
+    border-bottom: 3px solid #F2861D;
+    z-index: 10;
+  }
+
+  .navegacion li {
+    width: 150px;
+    position: relative;
+  }
+
+  .buscador {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: stretch;
+    margin-right: 10px;
+    width: 50px;
+  }
+
+  .slogan-text {
+    text-align: center;
+    padding: 0 0px;
+  }
+
+  .carrusel {
+    width: 100%;
+    aspect-ratio: 16 / 7;
+    position: relative;
+    overflow: hidden;
+    padding-inline-start: 0px;
+  }
+
+  .foto-img {
+    width: 100%;
+    border-radius: 20px;
+    aspect-ratio: 16 / 7;
   }
 }
